--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.6.8",
     "element-plus": "^2.6.1",
     "lottie-web": "^5.12.2",
     "pinia": "^2.0.35",
